--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "prefix": "+",
-  "token": "ODk2ODY0MjYxNzk0NTgyNTYx.YWNT7g.y-xClpv7_Qg7KJnP-YU8a3FSsu0",
-  "idowner": "503242483615006720"
+  "prefix": "PREFIX",
+  "token": "TOKEN",
+  "idowner": "TON ID"
 }
     
